--- a/vars.yml.sample
+++ b/vars.yml.sample
@@ -12,3 +12,6 @@ vpc_cidr_block: "10.0.0.0/16"
 # Subnets
 public_subnet_1_cidr:  "10.0.1.0/24"
 private_subnet_1_cidr: "10.0.2.0/24"
+
+# K8 Cluster config
+k8_cluster_name: "foo.example.com"
